modify verify token
