# docs/swagger.yaml
@@ -8,6 +8,9 @@ definitions:
       batteryStatus:
         example: charging
         type: string
+      deviceID:
+        example: f782fd74-d264-4901-8df5-c905f9df08db
+        type: string
       name:
         example: iphone 99xs
         type: string
@@ -17,6 +20,7 @@ definitions:
     required:
     - batteryLevel
     - batteryStatus
+    - deviceID
     - name
     - time
     type: object
@@ -30,6 +34,9 @@ definitions:
         type: string
       appVersion:
         example: 0.0.1
+        type: string
+      deviceID:
+        example: f782fd74-d264-4901-8df5-c905f9df08db
         type: string
       name:
         example: iphone 99xs
